--- a/liv/script/style.css
+++ b/liv/script/style.css
@@ -7,10 +7,6 @@
     padding: 0;
     margin: 0;
 }
-/* html, body {
-    -webkit-overflow-scrolling: touch;
-    overflow-scrolling: touch;
-} */
 
 html {
     height: 100%;
@@ -25,6 +21,7 @@ body {
     overflow-y: scroll;
     background-color: #000000;
 }
+
 ::-webkit-scrollbar {
     width: 10px;
     height:16px;
@@ -42,12 +39,6 @@ body {
     background: #fff;
 }
 
-.stop-scrolling {
-    height: 100%;
-    overflow: hidden;
-}
-
-/* ---------- MENU ---------- */
 .cookies-container{
     z-index: 10;
     position: fixed;
@@ -59,9 +50,14 @@ body {
     transition: all .3s ease-in-out;
 }
 
-.cookies-container.cookie-active{
-    bottom:0;
+.cookies-container.cookie-active{ bottom:0; }
+
+.stop-scrolling {
+    height: 100%;
+    overflow: hidden;
 }
+
+/* ---------- MENU ---------- */
 
 .navbar{
     width: 100vw; 
@@ -121,6 +117,7 @@ a:hover {
 }
 
 /* ---------- BUTTON ---------- */
+
 .custom-btn {
     width: 130px;
     height: 40px;
@@ -179,17 +176,7 @@ a:hover {
 }
 
 /* ---------- DIV AND TEXT ---------- */
-.videotext{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    line-height: 1;
-    font-weight: bold;
-    font-size: 2.5em;
-    height: 100vh;
-    width: 90vw;
-}
+
 .black{
     z-index: 1;
     position: relative;
@@ -240,68 +227,129 @@ a:hover {
     font-size: 6vw;
     font-weight: bold;
 }
-.secure{
-    /* height: 100vh; */
-    padding-top: 20vh;
-    position: relative;
-    /* background-image: url("../media/img/placeholder.webp");
-    background-color: #000000; */
-}
-.secure p{
-    padding:5vh;
-    position: absolute;
-    font-size: 60px;
-    font-weight: bold;
-    bottom: 0;
-}
 
-.world{
-    padding-top: 20vh;
-    z-index: 1;
-    padding-left: 5vh;
-    padding-bottom: 5vh;
-    font-size: 6vw;
+/* ---------- VIDEO BACKGROUND ---------- */
+
+.background-container {
+    position: fixed;
+    display: flex;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    flex-direction: row;
+    align-items: center;
+}
+.video-container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+
+    height: 100%;
+    width: 177.77777778vh; /* 100 * 16 / 9 */
+    min-width: 100%;
+    max-width: 100vw;
+    min-height: 56.25vw; /* 100 * 9 / 16 */
+}
+#bgVideo {
+    flex: 1;
+    background-color: #000;
+    opacity: 1;
+    visibility: visible;
+}
+.scroll-container {
+    overflow: hidden;
+}
+.step {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    position: relative;
+    height: 100vh;
+    width: 100%;
     text-align: center;
-    font-weight: bold;
-    position: relative;
-    width: 100vw;
-    background-color: #fff;
-    color: #000;
 }
-/* ---------- EVERYTHING DIV ---------- */
+.step>div {
+    display: flex;
+    align-content: center;
+    flex-direction: column;
+    align-items: center;
 
-.everything {
-    height: 200vh;
+    justify-content: flex-end;
+    padding-bottom: 5vh;
+    font-size: 50px;
+    /* justify-content: center;
+    font-size: 40px; */
+    font-weight: 700;
+    height: 100vh;
+    width: 100%;
+    color: #ffffff;
+    opacity: 1;
+}
+.steppa {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     position: relative;
+    height: 100vh;
+    width: 100%;
+    text-align: center;
     background-color: #ffffff;
-    color: black;
-    font-size: 6vw;
+}
+.steppa>div {
+    display: flex;
+    align-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    font-size: 40px;
+    height: 100vh;
+    width: 100%;
+    color: #000000;
+    opacity: 1;
+}
+
+.videotext{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    line-height: 1;
     font-weight: bold;
+    font-size: 2.5em;
+    height: 100vh;
+    width: 90vw;
 }
 
-.everything div{
+/* ---------- COMPARISON ---------- */
+
+.comparisonSection {
+    position: relative;
+}
+.comparisonImage {
+    width: 100vw;
+    height: 100vh;
+}
+.afterImage {
     position: absolute;
+    overflow: hidden;
+    top: 0;
+    transform: translate(100%, 0px);
 }
-.aaa{
-    left: 4vw;
-    top: 40vh;
+.afterImage img {
+    transform: translate(-100%, 0px);
 }
-.bbb{
-    left: 26vw;
-    top: 40vh;
-}
-.ccc{
-    color: #ED1E40;
-    left: 60vw;
-    top: 40vh;
-}
-.ddd{
-    right: 4vw;
-    top: 40vh;
-    transition: right 0.3s;
+.comparisonImage img {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
 }
 
-/* ---------- LINES DIV ---------- */
+/* ---------- LINES ---------- */
 
 #lineSection{
     height: 335vh; 
@@ -433,166 +481,19 @@ a:hover {
 	}
 }
 
-@keyframes fadeInOpacity2 {
-	0% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 1;
-	}
-}
-
-@media only screen and (max-width: 600px) {
-
-    .step>div {
-        font-size: 40px !important;
-    }
-
-    #lineSection{ top: 25vh; height: 170vh; }
-
-    .device{ top: 22vh; }
-    /* .bgD img{ width: 30px; } */
-
-    .firstLine{ top: 0vh; }
-    .firstLine img{ height: 45vh; }
-
-    .firstConv{ top: 45vh; }
-    .firstConv img{ height: 7.5vh; }
-
-    .secondLine{ top: 52.5vh; }
-    .secondLine img{ height: 37.5vh; }
-
-    #crypto{
-        top: 66vh;
-        height: 8vw;
-        font-size: 4.5vw;
-    }
-
-    .secondConv{ top: 90vh; }
-    .secondConv img{ height: 5vh; }
-
-    .brain{ top: 95vh; }
-
-    .brainPiccolo{
-        width: 30%; 
-        left: 35%;
-    }
-    
-    .brainGrande{
-        width: 60%; 
-        left: 20%;
-    }
-
-    .hider{ height: 28vh; }
-    .hider2{ height: 28vh; }
-
-}
-
-/* ---------- VIDEO BACKGROUND ---------- */
-.background-container {
-    position: fixed;
-    display: flex;
-    bottom: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    flex-direction: row;
-    align-items: center;
-}
-.video-container {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-
-    height: 100%;
-    width: 177.77777778vh; /* 100 * 16 / 9 */
-    min-width: 100%;
-    max-width: 100vw;
-    min-height: 56.25vw; /* 100 * 9 / 16 */
-}
-#bgVideo {
-    flex: 1;
-    background-color: #000;
-    opacity: 1;
-    visibility: visible;
-}
-.scroll-container {
-    overflow: hidden;
-}
-.step {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+.secure{
+    /* height: 100vh; */
+    padding-top: 20vh;
     position: relative;
-    height: 100vh;
-    width: 100%;
-    text-align: center;
+    /* background-image: url("../media/img/placeholder.webp");
+    background-color: #000000; */
 }
-.step>div {
-    display: flex;
-    align-content: center;
-    flex-direction: column;
-    align-items: center;
-
-    justify-content: flex-end;
-    padding-bottom: 5vh;
-    font-size: 50px;
-    /* justify-content: center;
-    font-size: 40px; */
-    font-weight: 700;
-    height: 100vh;
-    width: 100%;
-    color: #ffffff;
-    opacity: 1;
-}
-.steppa {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    position: relative;
-    height: 100vh;
-    width: 100%;
-    text-align: center;
-    background-color: #ffffff;
-}
-.steppa>div {
-    display: flex;
-    align-content: center;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-weight: 700;
-    font-size: 40px;
-    height: 100vh;
-    width: 100%;
-    color: #000000;
-    opacity: 1;
-}
-
-/* ---------- COMPARISON ---------- */
-.comparisonSection {
-    position: relative;
-}
-.comparisonImage {
-    width: 100vw;
-    height: 100vh;
-}
-.afterImage {
+.secure p{
+    padding:5vh;
     position: absolute;
-    overflow: hidden;
-    top: 0;
-    transform: translate(100%, 0px);
-}
-.afterImage img {
-    transform: translate(-100%, 0px);
-}
-.comparisonImage img {
-    width: 100vw;
-    height: 100vh;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
+    font-size: 60px;
+    font-weight: bold;
+    bottom: 0;
 }
 
 /* ---------- SCANNER ---------- */
@@ -622,6 +523,55 @@ a:hover {
     font-size: 36px;
 }
 
+/* ---------- EVERYTHING ---------- */
+
+.everything {
+    height: 200vh;
+    position: relative;
+    background-color: #ffffff;
+    color: black;
+    font-size: 6vw;
+    font-weight: bold;
+}
+
+.everything div{
+    position: absolute;
+}
+.aaa{
+    left: 4vw;
+    top: 40vh;
+}
+.bbb{
+    left: 26vw;
+    top: 40vh;
+}
+.ccc{
+    color: #ED1E40;
+    left: 60vw;
+    top: 40vh;
+}
+.ddd{
+    right: 4vw;
+    top: 40vh;
+    transition: right 0.3s;
+}
+
+.world{
+    padding-top: 20vh;
+    z-index: 1;
+    padding-left: 5vh;
+    padding-bottom: 5vh;
+    font-size: 6vw;
+    text-align: center;
+    font-weight: bold;
+    position: relative;
+    width: 100vw;
+    background-color: #fff;
+    color: #000;
+}
+
+/* ---------- ABOUT ME ---------- */
+
 .imgfull{
     position: absolute;
     min-width: 100%;
@@ -642,13 +592,8 @@ a:hover {
     flex-direction: column;
 }
 
-.whoami{
-    width: 70vw;
-}
-
-.whoprofile{
-    width: 30vw;
-}
+.whoami{ width: 70vw; }
+.whoprofile{ width: 30vw; }
 
 .aboutme p{
     font-size: 0.45em;
@@ -723,67 +668,4 @@ a:hover {
 .foot ul li{
     padding-top: 10px;
     padding-bottom: 10px;
-}
-
-@media only screen and (max-width: 600px) {
-
-.menu{
-    left: 10vw;
-}
-
-.menu ul{
-    opacity: 1;
-    visibility: visible;
-}
-
-.richiesta{
-    display: none;
-}
-
-.video-container{
-    height: 100vh;
-    width: 100vw;
-    min-width: 100vw;
-    max-width: 100vw;
-    min-height: 100vh;
-    max-height: 100vh;
-}
-.video-container video{
-    max-width: 100vw;
-    max-height: 100vh;
-    object-fit: cover;
-}
-
-.videotext h1{
-    font-size: 40px;
-}
-
-.imagine p{
-    font-size: 40px;
-}
-
-.imagine{
-    height: 50vh;
-}
-
-.secure p{
-    font-size: 40px;
-}
-
-.foot{
-    display: initial;
-}
-
-.comparisonSection{
-    overflow-x: hidden;
-}
-
-#myForm h3{
-    font-size: 34px;
-    padding-bottom: 25px;
-}
-
-.myForm{
-    width: 80vw;
-}
 }
