--- a/liv/components/cookies.html
+++ b/liv/components/cookies.html
@@ -3,8 +3,11 @@
     We use cookies on our website to give you the most relevant experience by remembering your preferences and repeat visits.
     By clicking “Accept”, you consent to the use of the cookies. To find out more, read our <a href="../privacy/">privacy policy</a> and <a href="../cookies/">cookies policy</a>.
 </p>
-<button id="cookiebtn" class="custom-btn btn">
+<button id="cookiebtn" class="custom-btn">
     Accept
+</button>
+<button class="negative-btn">
+    Disable All
 </button>
 </div>
 
