--- a/liv/components/form.html
+++ b/liv/components/form.html
@@ -1,5 +1,5 @@
 <section id="steppa" class="steppa">
-    <div id="request">
+    <!-- <div id="request">
         <form name="myForm" id="myForm" action="" onsubmit="return validateForm()">      
             <h3>Be the first to get <span style="color:#ED1E40">Liv</span>.</h3>
 
@@ -14,5 +14,7 @@
                 <input class="custom-btn btn" style="width: 150px;" id="thebutton" readonly="readonly" type="submit" value="Request Access">
             </div>
         </form>
-    </div>
+    </div> -->
+
+    <div data-tf-widget="jzXRJvUw" data-tf-hide-headers data-tf-iframe-props="title=Newsletter Signup Form (copy)" data-tf-medium="snippet" style="width:100%;height:100%;"></div><script src="//embed.typeform.com/next/embed.js"></script>
 </section>
