--- a/liv/components/headerHome.html
+++ b/liv/components/headerHome.html
@@ -1,10 +1,10 @@
 <div id="navbar" class="navbar">
+    <div class="logo">
+        <a href="../">
+            <img src="../media/img/svg/liv.svg" alt="">
+        </a>
+    </div>
     <nav id="menu" class="menu">
-        <div>
-            <a href="../">
-                <img src="../media/img/svg/liv.svg" alt="">
-            </a>
-        </div>
         <ul>
             <li>
                 <a href="../about/" id="menucolor">
@@ -19,19 +19,26 @@
         </ul>
     </nav>
     <form action="#request" style="position: absolute; right: 2vw; height: 10vh; align-items: center; display: inline-flex;">
-        <input class="custom-btn btn richiesta" style="width: 150px;" readonly="readonly" type="submit" value="Request Access">
+        <input class="custom-btn richiesta" style="width: 150px;" readonly="readonly" type="submit" value="Request Access">
     </form>
 </div>
 
 <script>
 var prevScrollpos = window.pageYOffset;
+var navbar = document.getElementById("navbar");
 
 function menu() {
     var currentScrollPos = window.pageYOffset;
-    if (prevScrollpos > currentScrollPos) {
-        document.getElementById("navbar").style.top = "0";
+    if(currentScrollPos == 0){
+        navbar.classList.remove("navBG");
     } else {
-        document.getElementById("navbar").style.top = "-100px";
+        navbar.classList.add("navBG");
+    }
+
+    if (prevScrollpos >= currentScrollPos) {
+        navbar.style.top = "0";
+    } else {
+        navbar.style.top = "-100px";
     }
     prevScrollpos = currentScrollPos;
 }
