--- a/liv/script/style.css
+++ b/liv/script/style.css
@@ -131,7 +131,7 @@ a:hover {
     color: #000;
     border-radius: 20px;
     padding: 10px 25px;
-    background: #c7c7c7;
+    background: #d3d3d3;
     cursor: pointer;
     transition: all 0.3s ease;
     position: relative;
