--- a/liv/components/headerHome.html
+++ b/liv/components/headerHome.html
@@ -31,6 +31,7 @@ function menu() {
     var currentScrollPos = window.pageYOffset;
     if(currentScrollPos == 0){
         navbar.classList.remove("navBG");
+        navbar.style.top = "0";s
     } else {
         navbar.classList.add("navBG");
     }
