--- a/liv/components/cookiesold.html
+++ b/liv/components/cookiesold.html
@@ -1,23 +1,18 @@
-<div class="cookies-new">
-<div class="quit-cookies">
-X
-</div>
+<div class="cookies-container"> 
 <p>
     We use cookies on our website to give you the most relevant experience by remembering your preferences and repeat visits.
     By clicking “Accept”, you consent to the use of the cookies. To find out more, read our <a href="../privacy/">privacy policy</a> and <a href="../cookies/">cookies policy</a>.
 </p>
-<div>
-    <button id="cookiebtn" class="custom-btn">
-        Accept
-    </button>
-    <button class="negative-btn" style="margin-left: 10px;">
-        Disable All
-    </button>
-</div>
+<button id="cookiebtn" class="custom-btn">
+    Accept
+</button>
+<button class="negative-btn">
+    Disable All
+</button>
 </div>
 
 <script>
-    const cookies = document.querySelector(".cookies-new");
+    const cookies = document.querySelector(".cookies-container");
     const cookiebtn = document.getElementById("cookiebtn");
 
     cookiebtn.addEventListener("click", () => {
