--- a/liv/components/headerHome.html
+++ b/liv/components/headerHome.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
     <form action="#request" style="position: absolute; right: 2vw; height: 10vh; align-items: center; display: inline-flex;">
-        <input class="custom-btn richiesta" style="width: 150px;" readonly="readonly" type="submit" value="Request Access">
+        <input class="custom-btn exception richiesta" style="width: 150px;" readonly="readonly" type="submit" value="Request Access">
     </form>
 </div>
 
@@ -31,7 +31,7 @@ function menu() {
     var currentScrollPos = window.pageYOffset;
     if(currentScrollPos == 0){
         navbar.classList.remove("navBG");
-        navbar.style.top = "0";s
+        navbar.style.top = "0";
     } else {
         navbar.classList.add("navBG");
     }
