--- a/liv/components/headerHome.html
+++ b/liv/components/headerHome.html
@@ -17,10 +17,10 @@
                 </a>
             </li>
         </ul>
+
+    <button class="custom-btn exception richiesta" data-tf-popup="jzXRJvUw" data-tf-iframe-props="title=Newsletter Signup Form (copy)" data-tf-medium="snippet">Request Access</button><script src="//embed.typeform.com/next/embed.js"></script>
+
     </nav>
-    <form action="#request" style="position: absolute; right: 2vw; height: 10vh; align-items: center; display: inline-flex;">
-        <input class="custom-btn exception richiesta" style="width: 150px;" readonly="readonly" type="submit" value="Request Access">
-    </form>
 </div>
 
 <script>
