--- a/liv/components/cookies.html
+++ b/liv/components/cookies.html
@@ -1,10 +1,11 @@
 <div class="cookies-new">
 <div class="quit-cookies">
-X
+<img src="../media/img/svg/x.svg">
 </div>
+<h3>Cookie Policy</h3>
 <p>
     We use cookies on our website to give you the most relevant experience by remembering your preferences and repeat visits.
-    By clicking “Accept”, you consent to the use of the cookies. To find out more, read our <a href="../privacy/">privacy policy</a> and <a href="../cookies/">cookies policy</a>.
+    By clicking “Accept”, you consent to the use of the cookies. To find out more, read our <a href="../privacy/">Privacy Policy</a> and <a href="../cookies/">Cookie Policy</a>.
 </p>
 <div>
     <button id="cookiebtn" class="custom-btn">
