--- a/liv/components/footer.html
+++ b/liv/components/footer.html
@@ -3,7 +3,7 @@
         <ul>
             <li style="padding-top: 0; padding-bottom: 0;"> 
             <a href="../">
-                <img src="../media/img/svg/liv.svg" alt="">
+                <img src="../media/img/svg/liv-red.svg" alt="">
             </a>
             </li>
             <li><a href="../about/index.html">About</a></li>
