--- a/liv/script/style.css
+++ b/liv/script/style.css
@@ -173,38 +173,34 @@ a:hover {
 
 /* ---------- BUTTON ---------- */
 
-.custom-btn {
+.btn{
+    font-size: 13.3px;
     width: 130px;
     height: 40px;
-    color: #000;
     border-radius: 20px;
     padding: 10px 25px;
-    background: #fff;
     cursor: pointer;
     transition: all 0.3s ease;
     position: relative;
     display: inline-block;
     outline: none;
+}
+
+.normal-btn {
+    color: #000;
+    background: #fff;
     border: none;
 }
 
-.exception{
+.exception-btn{
+    color: #000;
+    background: #fff;
     border: 1px solid #000;
 }
 
 .negative-btn {
-    width: 130px;
-    height: 40px;
     color: #fff;
-    border-radius: 20px;
-    padding: 10px 25px;
     background: #000000;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    position: relative;
-    display: inline-block;
-    outline: none;
-    border: none;
     border: 1px solid #fff;
 }
 
@@ -275,6 +271,7 @@ a:hover {
 .background-container {
     position: fixed;
     display: flex;
+    z-index: -1;
     bottom: 0px;
     left: 0px;
     width: 100%;
@@ -529,6 +526,7 @@ a:hover {
     /* height: 100vh; */
     padding-top: 20vh;
     position: relative;
+    background-color: #000;
     /* background-image: url("../media/img/placeholder.webp");
     background-color: #000000; */
 }
