--- a/liv/components/comparison.html
+++ b/liv/components/comparison.html
@@ -1,3 +1,7 @@
+<!-- <div id="fakepause"> 
+	<img src="../media/img/d1.webp">
+</div> -->
+
 <section id="comparison" class="comparisonSection">
     <div class="comparisonImage beforeImage">
         <img src="../media/img/d1.webp" alt="before">
