--- a/liv/script/style.css
+++ b/liv/script/style.css
@@ -370,6 +370,17 @@ a:hover {
 }
 
 /* ---------- COMPARISON ---------- */
+#fakepause{
+    position: relative;
+}
+
+#fakepause img{
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+}
 
 .comparisonSection {
     position: relative;
