--- a/liv/components/comparison.html
+++ b/liv/components/comparison.html
@@ -2,14 +2,14 @@
 	<img src="../media/img/d1.webp">
 </div> -->
 
-<section id="comparison" class="comparisonSection">
+<div id="comparison" class="comparisonSection">
     <div class="comparisonImage beforeImage">
         <img src="../media/img/d1.webp" alt="before">
     </div>
     <div class="comparisonImage afterImage">
         <img src="../media/img/d2.webp" alt="after">
     </div>
-</section>
+</div>
 
 <script>
 
