--- a/liv/components/every.html
+++ b/liv/components/every.html
@@ -1,5 +1,5 @@
 
-<section class="everything" id="everything" style="z-index: 2;">
+<div class="everything" id="everything" style="z-index: 2;">
 
     <div id="world" class="world">
         <p>Imagine a <span style="color: #ED1E40;">world</span></p>
@@ -11,7 +11,7 @@
     <div class="ccc"><p>around</p></div>
     <div class="aaa" style="top:150vh; left: 5vw;"><p>Knows</p></div>
     <div class="ccc" style="top:150vh"><p>about</p></div>
-</section>
+</div>
 
 <script>
 
