--- a/liv/components/footer.html
+++ b/liv/components/footer.html
@@ -1,4 +1,4 @@
-<section class="footer">
+<div class="footer">
     <div class="foot on">
         <ul>
             <li style="padding-top: 0; padding-bottom: 0;"> 
@@ -42,4 +42,4 @@
             </li>
         </ul>
     </div>
-</section>
+</div>
