--- a/liv/components/form.html
+++ b/liv/components/form.html
@@ -1,4 +1,4 @@
-<section id="steppa" class="steppa">
+<div id="steppa" class="steppa">
     <!-- <div id="request">
         <form name="myForm" id="myForm" action="" onsubmit="return validateForm()">      
             <h3>Be the first to get <span style="color:#ED1E40">Liv</span>.</h3>
@@ -17,4 +17,4 @@
     </div> -->
 
     <div data-tf-widget="jzXRJvUw" data-tf-hide-headers data-tf-iframe-props="title=Newsletter Signup Form (copy)" data-tf-medium="snippet" style="width:100%;height:100%;"></div><script src="//embed.typeform.com/next/embed.js"></script>
-</section>
+</div>
