--- a/liv/components/lines.html
+++ b/liv/components/lines.html
@@ -1,4 +1,5 @@
-<section id="lineSection">
+<div style="position: relative; height: 60vh;"></div>
+<div id="lineSection">
     <div class="device bgD" id="basedevice" style="display: none;">
         <img id="rotateme1" src="../media/img/icons/Base.svg">
         <img id="rotateme2" src="../media/img/icons/Base.svg">
@@ -37,7 +38,7 @@
         </div>
 
         <!-- <img id="crypto" src="../media/img/device/cript.svg"> -->
-        <div id="crypto"> ENCRYPTING </div>
+        <div id="crypto"> PRIVACY-FIRST POLICY </div>
 
         <div class="line secondLine" id="lines2">
             <img src="../media/img/linee/secondLine.svg">
@@ -50,7 +51,7 @@
 
     <!-- <img style="position: relative; width: 30%; left: 35%; top: 280vh; opacity: 1;" src="../media/img/device/circle.svg"> -->
     <img id="brain" class="brain brainPiccolo" src="../media/img/icons/brain.svg">
-</section>
+</div>
 
 <script>
 
