--- a/liv/script/style.css
+++ b/liv/script/style.css
@@ -22,9 +22,9 @@ body {
     background-color: #000000;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     width: 10px;
-    height:16px;
+    height:10px;
 }
 ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px black;
@@ -37,7 +37,7 @@ body {
 }
 ::-webkit-scrollbar-thumb:hover {
     background: #fff;
-}
+} */
 
 .cookies-new{
     z-index: 10;
@@ -109,6 +109,17 @@ body {
     height: 100%;
     overflow: hidden;
 }
+
+/* .container{
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scroll-snap-points-y: repeat(100vh);
+    scroll-snap-type: y mandatory;
+}
+
+section{
+    scroll-snap-align: center;
+} */
 
 /* ---------- MENU ---------- */
 
@@ -205,7 +216,7 @@ a:hover {
 }
 
 .richiesta{
-    width: 150px;
+    width: auto;
     position: absolute;
     right: 0;
     height: 40px;
@@ -333,6 +344,37 @@ a:hover {
     color: #ffffff;
     opacity: 1;
 }
+
+.fase {
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    text-align: center;
+    z-index: 10;
+}
+.fase>div {
+    display: flex;
+    align-content: center;
+    flex-direction: column;
+    align-items: center;
+
+    justify-content: flex-end;
+    padding-bottom: 5vh;
+    font-size: 50px;
+    /* justify-content: center;
+    font-size: 40px; */
+    font-weight: 700;
+    height: 100vh;
+    width: 100%;
+    color: #ffffff;
+    opacity: 1;
+}
+
 .steppa {
     display: flex;
     flex-direction: column;
@@ -464,7 +506,8 @@ a:hover {
     align-items: center;
     width: 80%;
     left: 10%;
-    height: 4vw;
+    height: 6vw;
+    border-radius: 3vw;
     background-color: #ED1E40;
     text-align: center;
     font-size: 3vw;
