--- a/liv/script/style.css
+++ b/liv/script/style.css
@@ -18,7 +18,7 @@ html {
 body {
     height: 100%;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     background-color: #000000;
 }
 
@@ -109,21 +109,6 @@ body {
     height: 100%;
     overflow: hidden;
 }
-
-/* .container {
-    scroll-snap-type: y mandatory;
-    overflow-y: scroll;
-    overflow-x: hidden;
-  
-    width: 100vw;
-    height: 100vh;
-}
-
-.container > section {
-    scroll-snap-align: center;
-    width: 100%;
-    height: 100%;
-} */
 
 /* ---------- MENU ---------- */
 
@@ -352,7 +337,8 @@ a:hover {
 #description{
     position: fixed;
     text-align: center;
-    width: 100vw;
+    width: 80vw;
+    left: 10vw;
     display: flex;
     z-index: 2;
     height: 100vh;
