--- a/liv/components/scrolling.html
+++ b/liv/components/scrolling.html
@@ -1,18 +1,79 @@
-<iframe id="cool" src="../components/frame.html" style="width: 100vw; height: 100vh; border: 0" ></iframe>
+<div id="background-container" class="background-container">
+    <div id="video-container" class="video-container">
+        <video src="../media/video/output.mp4" type="video/mp4" id="bgVideo" autoplay muted="muted" playsinline="" controlslist="nodownload"></video>
+    </div>
+</div>
+
+<div id="scroll-container" class="scroll-container">
+
+    <section id="step0" class="step"></section>
+    
+    <section id="step1" class="step">
+        <div><h3>Where all your devices are connected to one centralized system / AI brain / neural network</h3></div>
+    </section>
+    <section id="step2" class="step">
+        <div><h3>Where your “smart home” intelligently monitors your health condition</h3></div>
+    </section>
+    <section id="step3" class="step">
+        <div><h3>Where every time you pick up your phone, drive your car, sit in front of your computer or watch TV</h3></div>
+    </section>
+    <section id="step4" class="step">
+        <div><h3>the built-in camera monitors/tracks your health condition</h3></div>
+    </section>
+    <section id="step5" class="step">
+        <div><h3>Where the wireless signals around you tracks your health in an unobtrusive manner</h3></div>
+    </section>
+    
+    <section id="step6" class="step"></section>
+
+</div>
 
 <script>
+    
+//GSAP
+gsap.registerPlugin(ScrollTrigger);
 
-// function fixit() {
+const bgVvideo = document.querySelector("#bgVideo");
 
-//     //entra nella sezione
-//     var cool = document.getElementById("cool").getBoundingClientRect();
+bgVideo.pause();
+bgVideo.currentTime = 0;
 
-//     if (window.innerHeight >= cool.top && 0 <= cool.bottom){
-//         console.log("ciao");
-//     }
+let sections = gsap.utils.toArray(".step");
+sections.forEach((step, i) => {
 
-// }
+    ScrollTrigger.create({
+        trigger: step,
+        start: "bottom bottom",
+        end: "+=1000",
+        pin: true,
+        anticipatePin: 1,
+    });
 
-// window.addEventListener("scroll", fixit);
+    gsap.fromTo(bgVideo, { currentTime: 3 * i }, {
+        scrollTrigger: {
+            trigger: step,
+            scrub: 2,
+            start: "top bottom",
+            end: "bottom bottom",
+        },
+        currentTime: 3 * (i + 1),
+        duration: 3,
+        ease: "none",
 
-// </script>
+    });
+
+});
+    
+const container = document.getElementById("background-container");
+
+function scrollContainer() {
+    var containerEdge = document.getElementById("scroll-container").getBoundingClientRect();
+
+    if (0 >= (containerEdge.bottom + window.innerHeight)){
+        container.style.display = "none";
+    } else {
+        container.style.display = "flex";
+    }
+}
+window.addEventListener("scroll", scrollContainer);
+</script>
